--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Diplomski" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Diplomski" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">#AA000000</item>
@@ -12,5 +12,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:colorEdgeEffect">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="Theme.Diplomski.Menu" parent="Theme.Diplomski">
+        <item name="backgroundColor">#96000000</item>
+        <item name="android:textSize">64sp</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 </resources>
